[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-layout"
version = "3.0.0"
description = "Force-directed & hierarchical graph layout engine with graph algorithms"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "creative-projects"}]
keywords = ["graph", "layout", "force-directed", "visualization", "graphviz"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
graph-layout = "graph_layout.cli:main"

[tool.setuptools.packages.find]
include = ["graph_layout*"]

[tool.pytest.ini_options]
testpaths = ["tests"]