[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hmm-toolkit"
version = "3.0.0"
description = "Hidden Markov Model toolkit: Forward, Backward, Viterbi, Baum-Welch, Gaussian HMM, Profile HMM, visualisation, advanced training — pure Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "creative-projects"}]
keywords = ["hmm", "hidden-markov-model", "machine-learning", "bioinformatics", "viterbi", "baum-welch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "pyyaml>=6.0"]

[project.scripts]
hmm-toolkit = "hmm.cli:main"

[tool.setuptools]
packages = ["hmm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]