[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpeg-codec"
version = "2.0.0"
description = "A from-scratch baseline JPEG encoder/decoder with quality metrics, config files, and benchmarking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "creative-projects"},
]
keywords = ["jpeg", "codec", "encoder", "decoder", "dct", "huffman", "compression", "image"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Education",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
pil = ["pillow>=9.0"]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pillow>=9.0",
]

[project.scripts]
jpeg-codec = "jpeg_codec.cli:main"

[project.urls]
Repository = "https://github.com/jayis1/creative-projects"

[tool.setuptools]
packages = ["jpeg_codec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"