[project]
name = "kalman-estimator"
version = "1.0.0"
description = "From-scratch Kalman, EKF, UKF, and RTS smoother implementations"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"