[project]
name = "kalman-estimator"
version = "3.0.0"
description = "From-scratch state-estimation library: KF, EKF, UKF, InfoFilter, AdaptiveKF, EnKF, ParticleFilter, RTS smoother"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "creative-projects"}]
keywords = ["kalman", "filter", "estimation", "EKF", "UKF", "particle filter", "state estimation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
toml = ["tomli>=2.0; python_version < '3.11'"]

[project.scripts]
kalman-estimator = "kalman_estimator.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
include = ["kalman_estimator*"]