[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmc-sampler"
version = "2.0.0"
description = "From-scratch MCMC sampling toolkit: Metropolis-Hastings, HMC, NUTS, slice, Gibbs, adaptive — with Bayesian modelling, parallel chains, config, and analysis tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Creative Projects"}]
keywords = ["mcmc", "bayesian", "sampling", "nuts", "hmc", "metropolis-hastings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
plot = ["matplotlib>=3.4"]
yaml = ["pyyaml>=6.0"]
test = ["pytest>=7.0", "pyyaml>=6.0"]
all = ["matplotlib>=3.4", "pyyaml>=6.0"]
dev = ["pytest>=7.0", "pyyaml>=6.0", "matplotlib>=3.4"]

[project.scripts]
mcmc-sampler = "mcmc_sampler.cli:main"

[tool.setuptools.packages.find]
include = ["mcmc_sampler*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"